--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <title>Hi, Webpack!</title>
+    <title>Hii, Webpack!</title>
     <script src="https://unpkg.com/lodash@4.17.15/lodash.min.js"></script>
   </head>
   <body>
